--- a/admin.html
+++ b/admin.html
@@ -111,6 +111,8 @@ function logme(id) {
         <tr><td id='detail_time'>Time: 18:30</td></tr>
         <tr><td>Comment: blah</td></tr>
     </table>
+    <table id="Table1", class="table1">
+    </table>
     </body>
 </html>
 
