Added paragraphs for return messages

--- a/admin.html
+++ b/admin.html
@@ -113,6 +113,8 @@ function logme(id) {
     </table>
     <table id="Table1", class="table1">
     </table>
+    <p id="status"></p>
+    <p id="output"></p>
     </body>
 </html>
 
