--- a/admin.html
+++ b/admin.html
@@ -139,7 +139,11 @@ function changeDate() {
     inside();
 }
 function setToday() {
-    document.getElementById("datepicker").value = $.datepicker.formatDate( "dd MM yy", new Date());
+    var now = new Date();
+    if (now.getHours < 2) {
+        now -= 86400000;
+    }
+    document.getElementById("datepicker").value = $.datepicker.formatDate( "dd MM yy", now);
     applyBookings();
     inside();
 }
