--- a/admin.html
+++ b/admin.html
@@ -82,9 +82,9 @@
     <head>
         <title>Restaurant Admin</title>
         <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
-        <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
-        <script src="http://code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
-        <script src="http://www.datejs.com/build/date.js" type="text/javascript"></script>
+        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+        <script src="https://code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
+        <script src="https://www.datejs.com/build/date.js" type="text/javascript"></script>
         <script src="admin.js" type="text/javascript"></script>
         <script src="booking.js" type="text/javascript"></script>
         <script>
