--- a/admin.html
+++ b/admin.html
@@ -1,87 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <style>
-        .table1{
-            cellspacing: 0px;
-            cellpadding: 0px;
-            border: 0px;
-            width: 325px;
-        }
-        .table2{
-            cellspacing: 0px;
-            cellpadding: 1px;
-            border: 1px;
-            width: 300px;
-        }
-        .row{
-            color: white;
-            background-color: grey;
-        }
-        .div{
-            width: 320px;
-            height: 60px;
-            overflow: auto;
-        }
-        table.details tr:hover {
-            color: white;
-        }
-
-        table.details {
-            border-collapse:collapse;
-        }
-        table.details th {
-            color:black;
-        }
-        table.details td {
-            padding: 0px 10px 0px 10px;
-        }
-        /* Tooltip container */
-        .tooltip td {
-            position: relative;
-        }
-
-        /* Tooltip text */
-        .tooltip .tooltiptext {
-            visibility: hidden;
-            min-width: 180px;
-            background-color: #ff95bf;
-            color: #000;
-            text-align: center;
-            padding: 5px 0;
-            border-radius: 6px;
-
-            /* Position the tooltip text */
-            position: absolute;
-            z-index: 1;
-            top: -5px;
-            bottom:auto;
-            right: 128%;
-
-            /* Fade in tooltip */
-            opacity: 0;
-        }
-
-        /* Tooltip arrow */
-        .tooltip .tooltiptext::after {
-            content: "";
-            position: absolute;
-            top: 12px;
-            left: 100%;
-            margin-top: -5px;
-            border-width: 5px;
-            border-style: solid;
-            border-color: transparent transparent transparent #ff95bf;
-        }
-
-
-        /* Show the tooltip text when you mouse over the tooltip container */
-        .tooltip:hover .tooltiptext {
-            visibility: visible;
-            opacity: 1;
-        }    </style>
     <head>
         <title>Restaurant Admin</title>
         <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+        <link rel="stylesheet" href="restaurant.css" />
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
         <script src="https://code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
         <script src="https://www.datejs.com/build/date.js" type="text/javascript"></script>
